--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,13 +1,6 @@
 <resources>
-    <string name="app_name">Aider-Helper</string>
-    <string name="title_activity_channel">ChannelActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-
-    <string name="read">Read</string>
-    <string name="choose_voice">Choose a voice</string>
+    <string name="app_name">Aider</string>
+    <string name="email_not_valid">Email not valid</string>
+    <string name="password_not_valid">Password too short, should be 6 characters at least</string>
+    <string name="date_format_not_valid">Date format not valid, should be \'DD/MM/YYYY\'</string>
 </resources>
